shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-ingress
  namespace: shop
  annotations:
    kubernetes.io/ingress.class: nginx
    # 앤서블이 생성해 준 공통 발급소를 지정합니다.
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # HTTPS 강제 리다이렉트 활성화
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: shop.jhs-k8s.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  # 쇼핑몰 전용 SSL 인증서 방을 지정합니다.
  tls:
  - hosts:
    - shop.jhs-k8s.kro.kr
    secretName: shop-frontend-tls # Cert-Manager가 이 이름으로 인증서를 구워다 줍니다.
